refactor: resultview 메서드 분리