@@ -3,6 +3,7 @@ package view;
 import domain.Ladder;
 import domain.SingleLine;
 import domain.Line;
+import domain.Users;
 
 import java.util.List;
 
@@ -12,19 +13,19 @@ public class ResultView {
 
     }
 
-    public static void printNames(final List<String> userNames) {
-        System.out.println("실행결과");
-        System.out.println();
-
+    public static void printNames(final Users users) {
         StringBuilder stringBuilder = new StringBuilder();
 
-        stringBuilder.append(String.format("%-5s", userNames.get(0)));
+        stringBuilder.append(users.getFirst()).append(" ");
+        users.getMiddleUsers().forEach(userName -> stringBuilder.append(String.format("%6s", userName)));
+        stringBuilder.append(String.format("%5s", users.getLast()));
 
-        for (int i = 1; i < userNames.size() - 1; i++) {
-            stringBuilder.append(String.format("%6s", userNames.get(1)));
-        }
-        stringBuilder.append(String.format("%5s", userNames.get(userNames.size() - 1)));
         System.out.println(stringBuilder);
+    }
+
+    public static void printResultMessage() {
+        System.out.println("실행결과");
+        System.out.println();
     }
 
     public static void printResult(final Ladder ladder) {
